# no-crops

./: .gitignore  README.md  setup.cfg  setup.py
contrib/: example.nml  get_wood_from_restarts.py  tools.py
data/: README.md
doc/: forestation_sensitivity_experiments.tex
no-crops/: get_co2.py  kill_all_humans.py  plot_co2.py  plot_co22.py  plot_frac.py  plot_global_warming_level.py  plot_global_warming_level_australia.py  plot_global_warming_level_carbon.py  plot_global_warming_level_precip.py  plot_global_warming_level_temperature.py  plot_test.py  plot_variables.py
nocrops/: __main__.py  co2only_pr.py  co2only_tas.py  get_co2.py  join_co2.py  kill_all_humans.py  plot_NoCrAu.py  plot_co2.py  plot_co2_pp.py  plot_frac.py  plot_frac_inset.py  plot_global_warming_level_australia.py  plot_global_warming_level_australia_precip.py  plot_global_warming_level_australia_temperature.py  plot_global_warming_level_carbon.py  plot_global_warming_level_precip.py  plot_global_warming_level_temperature.py  plot_global_warming_level_temperature_firstyear.py  plot_partial_forestation.py  plot_partial_forestation_australia_carbon.py  plot_partial_forestation_australia_precip.py  plot_partial_forestation_australia_tas.py  plot_partial_forestation_carbon.py  plot_partial_forestation_pr.py  plot_partial_forestation_tas.py  plot_pft_australia_carbon.py  plot_pft_australia_pr.py  plot_pft_australia_tas.py  plot_pft_cpools.py  plot_pft_pr.py  plot_pft_tas.py  plot_pre-industrial_carbon_variables.py  thinning_experiment.py
partial_forestation/: get_co2_nml.py
plots/: README.md
(+29 files in other folders)
