[metadata]
name = no-crops
version = 0.1.0
author = Tammas Loughran
author_email = tammas.loughran@csiro.au
description = Analysis of no-crop sensitivity experiments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/tammasloughran/no-crops
license = CSIRO Non-Commercial Source Code Licence Agreement v1.0
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = no-crops
install_requires =
    cdo
    matplotlib
    netCDF4
    numpy
    xarray
    cdo_decorators @ git+https://gitlab.com/tammasloughran/cdo_decorators.git
    py-markdown-table
    pymannkendall
